--- a/src/Styles/cardparent.css
+++ b/src/Styles/cardparent.css
@@ -51,6 +51,7 @@
 
 .cards{
     width: 100%;
+    margin: 0 auto;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
@@ -62,6 +63,10 @@
 @media screen and (max-width: 468px) {
     .card-parent{
         overflow: visible;
+    }
+
+    .header{
+        margin-top: 1.5rem;
     }
     
     .rule br{
